Closed Bug 1258220 Opened 10 years ago Closed 10 years ago

Youtube videos not working on Windows XP

Categories

(Core :: Audio/Video: Playback, defect, P1)

46 Branch
x86
Windows XP
defect

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox45 --- wontfix
firefox46 --- fixed
firefox47 --- fixed
firefox48 --- fixed

People

(Reporter: silence, Assigned: cpearce, NeedInfo)

Details

Attachments

(1 file)

Youtube on Windows XP not working any video. This bug i noticed on Firefox 46 beta and Nightly 47 and 48, probably Aurora too. Now YT video load default in mp4 file, but XP not support H.264. Firefox 45 and previous version load YT html5 video always used WebM vp8 or vp9 codec. When check nerds stats, on 46b, Nightly 47,48 shows different: Mime Type: video/mp4; codecs="avc1.4d401e and show always: "If playback doesn't begin shortly, try restarting your device" This bug is probably only on XP.
did you disable webm video?? media.webm.enabled please provide the output of about:support
Flags: needinfo?(silence)
media.webm.enabled is true. I don't manual change any key. Example my set in about:config media.mediasource.enabled;true media.mediasource.mp4.enabled;true media.mediasource.webm.audio.enabled;true media.mediasource.webm.enabled;false All video settings have default. I see first time on page https://www.youtube.com/html5 on Firefox 46b, Nightly 47,48 all icons in blue about:support Application Basics ------------------ Name: Firefox Version: 46.0b2 Build ID: 20160316065941 Update Channel: beta User Agent: Mozilla/5.0 (Windows NT 5.1; rv:46.0) Gecko/20100101 Firefox/46.0 Multiprocess Windows: 0/1 (Disabled) Safe Mode: false Crash Reports for the Last 3 Days --------------------------------- All Crash Reports (including 1 pending crash in the given time range) Extensions ---------- Name: Firefox Hello Beta Version: 1.1.12 Enabled: true ID: loop@mozilla.org Name: Pocket Version: 1.0 Enabled: true ID: firefox@getpocket.com Name: Microsoft .NET Framework Assistant Version: 0.0.0 Enabled: false ID: {20a82645-c095-46ed-80e3-08825760534b} Graphics -------- Adapter Description: NVIDIA GeForce 7300 GT Adapter Drivers: nv4_disp Adapter RAM: Unknown Asynchronous Pan/Zoom: none Device ID: 0x02e2 DirectWrite Enabled: false (0.0.0.0) Driver Date: 1-31-2013 Driver Version: 6.14.13.783 GPU #2 Active: false GPU Accelerated Windows: 1/1 Direct3D 9 (OMTC) Subsys ID: 00000000 Supports Hardware H264 Decoding: No; Vendor ID: 0x10de WebGL Renderer: Google Inc. -- ANGLE (NVIDIA GeForce 7300 GT Direct3D9 vs_3_0 ps_3_0) windowLayerManagerRemote: true AzureCanvasBackend: skia AzureContentBackend: cairo AzureFallbackCanvasBackend: cairo AzureSkiaAccelerated: 0 Important Modified Preferences ------------------------------ browser.cache.disk.capacity: 0 browser.cache.disk.filesystem_reported: 1 browser.cache.disk.smart_size.enabled: false browser.cache.disk.smart_size.first_run: false browser.cache.frecency_experiment: 2 browser.download.importedFromSqlite: true browser.download.useDownloadDir: false browser.places.importBookmarksHTML: false browser.places.smartBookmarksVersion: 7 browser.sessionstore.upgradeBackup.latestBuildID: 20160316065941 browser.startup.homepage_override.buildID: 20160316065941 browser.startup.homepage_override.mstone: 46.0 dom.apps.reset-permissions: true dom.mozApps.used: true extensions.lastAppVersion: 46.0 gfx.crash-guard.d3d11layers.appVersion: 46.0 gfx.crash-guard.d3d11layers.deviceID: 0x02e2 gfx.crash-guard.d3d11layers.driverVersion: 6.14.13.783 gfx.crash-guard.d3d11layers.feature-d2d: true gfx.crash-guard.d3d11layers.feature-d3d11: true gfx.crash-guard.status.d3d11layers: 2 media.gmp-eme-adobe.abi: x86-msvc-x86 media.gmp-eme-adobe.lastUpdate: 1458524865 media.gmp-eme-adobe.version: 17 media.gmp-gmpopenh264.abi: x86-msvc-x86 media.gmp-gmpopenh264.lastUpdate: 1458524868 media.gmp-gmpopenh264.version: 1.5.3 media.gmp-manager.buildID: 20160316065941 media.gmp-manager.lastCheck: 1458524849 media.hardware-video-decoding.failed: true network.cookie.prefsMigrated: true network.predictor.cleaned-up: true places.history.expiration.transient_current_max_pages: 30721 plugin.disable_full_page_plugin_for_types: application/pdf plugin.importedState: true privacy.sanitize.migrateClearSavedPwdsOnExit: true Important Locked Preferences ---------------------------- JavaScript ---------- Incremental GC: true Accessibility ------------- Activated: false Prevent Accessibility: 0 Library Versions ---------------- NSPR Expected minimum version: 4.12 Version in use: 4.12 NSS Expected minimum version: 3.22.3 Basic ECC Version in use: 3.22.3 Basic ECC NSSSMIME Expected minimum version: 3.22.3 Basic ECC Version in use: 3.22.3 Basic ECC NSSSSL Expected minimum version: 3.22.3 Basic ECC Version in use: 3.22.3 Basic ECC NSSUTIL Expected minimum version: 3.22.3 Version in use: 3.22.3 Experimental Features ---------------------
Flags: needinfo?(silence)
(In reply to jukaru from comment #0) > Youtube on Windows XP not working any video. This bug i noticed on Firefox > 46 beta and Nightly 47 and 48, probably Aurora too. Now YT video load > default in mp4 file, but XP not support H.264. Firefox 45 and previous > version load YT html5 video always used WebM vp8 or vp9 codec. When check Windows XP now has h264 supports thanks to Adobe's GMP. If you set media.gmp.decoder.enabled to false, does it play now?
Flags: needinfo?(silence)
Yes, after media.gmp.decoder.enabled change to false videos play as webm vp9 like Firefox 45 and lower versions. This good, but if now h264 is now supported for XP, why not play as mp4?
Flags: needinfo?(silence)
(In reply to jukaru from comment #4) > Yes, after media.gmp.decoder.enabled change to false videos play as webm vp9 > like Firefox 45 and lower versions. This good, but if now h264 is now > supported for XP, why not play as mp4? there are two issues at hand here. 1- YouTube no longer serves MSE/webm/vp9 to Windows XP users in Firefox 46 2- The Adobe GMP is broken with YouTube h264 videos. issue 1 is outside our control, and this is something YouTube has changed on their side. Normally, and almost everywhere, YouTube always prefers webm/vp9 when available: but for some reasons for Windows XP users they don't (verified that Windows 10 users are getting vp9 as expected). issue 2, it may be that the Adobe GMP is not working on some hardware, suspicion is on SSE support. What processor do you have?
Flags: needinfo?(rleider)
(In reply to jukaru from comment #4) > like Firefox 45 and lower versions. This good, but if now h264 is now > supported for XP, why not play as mp4? when you don't have hardware decoding, vp9 is almost always a better solution than h264: need for lower bandwidth and greater image quality. The cpu usage isn't much different. Your nvidia 7300 doesn't support h264 hw decoding.
Ok, My processor is AMD Athlon XP - SSE2 not supported. Probably h264 not play on any site for XP. I'm try on http://www.quirksmode.org/html5/tests/video.html but mp4 still not supported too.
Ok, thx probably 7300GT not support hardware decoding, but why same h264 video Maxthon play mp4 on test site.
youtube reencode all their videos; so you can never really test the "same" video, they are never the same. So it could be that the encoding on this site works with adobe's decoder, but not others.
We can try disabling the Adobe GMP if SSE2 isn't supported.
jukaru: Would you be able to help us debug this problem? Can you please download this Firefox test build, and see if YouTube works? http://archive.mozilla.org/pub/firefox/try-builds/cpearce@mozilla.com-ab796ce800c66693895f3efff52fc35c5a947fe0/try-win32/firefox-48.0a1.en-US.win32.zip You'll need to close any already open Firefox before you start this build. This build turns off MP4 playback if we detect that it is going to fail, so YouTube should fallback to another codec. Other MP4 playback won't work, but YouTube should start to work again.
Flags: needinfo?(silence)
Sorry for my english Yes, now Youtube play good all videos default as Webm. This compilation resolve easy problem on YT. And now on https://www.youtube.com/html5 H.264 and MSE & H.264 is red - this is regression like before 45 and previous version. But my maybe noob question is why: h264 not possible play on XP if: > Windows XP now has h264 supports thanks to Adobe's GMP. Chrome, Maxthon play mp4 on test sites on my XP, but not Firefox if "Windows XP now has h264 supports thanks to Adobe's GMP." Where is now difference?
Flags: needinfo?(silence)
Disable Adobe GMP if SSE2 not available. The long term fix is to ask Adobe to re-compile their GMP without SSE2 or with improved SSE2 detection, but the short term fix is to just not startup the Adobe GMP if SSE2 isn't available.
Assignee: nobody → cpearce
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #8734193 - Flags: review?(gsquelart)
Attachment #8734193 - Flags: review?(gsquelart) → review+
cpearce: do we want to uplift this fix to Aurora 47 and Beta 46?
Flags: needinfo?(cpearce)
If possible, please refer the question to the Adobe or may modify the plugin the past for people who have no support SSE2 processors in the system XP . It would be very helpful for the users of this system in staying with Firefox. Thx.
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
(In reply to Chris Peterson [:cpeterson] from comment #16) > cpearce: do we want to uplift this fix to Aurora 47 and Beta 46? Yes!
Flags: needinfo?(cpearce)
Comment on attachment 8734193 [details] [diff] [review] Patch: Disable Adobe GMP if SSE2 not present Approval Request Comment [Feature/regressing bug #]: YouTube - Unencrypted MP4 video playback on Windows XP and other Windows without system codecs using Adobe EME plugin [User impact if declined]: Users who have old systems that have CPUs which don't support SSE2 instructions will not be able to play MP4/H.264/AAC video, but Firefox will claim that it can. YouTube will fail to start playing for these users [Describe test coverage new/current, TreeHerder]: We don't have any test machines that lack SSE2 support, but we've tested this patch for a user with such a CPU, and it successfully detects this situation and turns off the Adobe EME plugin; that means YouTube will fall back to WebM. [Risks and why]: Low; we're turning off code we only just turned on. [String/UUID change made/needed]: None.
Attachment #8734193 - Flags: approval-mozilla-beta?
Attachment #8734193 - Flags: approval-mozilla-aurora?
Comment on attachment 8734193 [details] [diff] [review] Patch: Disable Adobe GMP if SSE2 not present Let's try to get this youtube/xp fix in for beta 6.
Attachment #8734193 - Flags: approval-mozilla-beta?
Attachment #8734193 - Flags: approval-mozilla-beta+
Attachment #8734193 - Flags: approval-mozilla-aurora?
Attachment #8734193 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: