Bug 1258220 - Disable Adobe GMP if SSE2 isn't supported. r=gerald